Update .gitignore and README.md

--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,11 @@ logs
 # Gauge - reports dir
 reports
 
-# Gauge - python compiled files
+# Python compiled files
 *.pyc
 
 # Virtual environment
 venv/
+
+# macOS files
 .DS_Store
-GaugePetstoreAutomation/manifest.json
-GaugePetstoreAutomation/env/default/default.properties
-GaugePetstoreAutomation/env/default/python.properties
-GaugePetstoreAutomation/step_impl/__init__.py
-GaugePetstoreAutomation/step_impl/step_impl.py
